--- a/new-gulp/package.json
+++ b/new-gulp/package.json
@@ -31,7 +31,7 @@
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.0.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^8.1.0",
